Add auth page in popup and redux

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="min-width:300px;">
 
 <head>
     <title>
@@ -7,12 +7,8 @@
     </title>
 </head>
 
-<body>
-    <div id="app" class="popup-content">
-        <h1 class="app-name">Levels</h1>
-
-        <div id="display-container"></div>
-    </div>
+<body style="background-color: #f5f5f5; margin: 0px;">
+    <div id="root" class="popup-content"></div>
 </body>
 
 </html>
